# cargo-sqruff

./: .gitattributes  Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
.github/workflows/: rust.yml  update-sqruff-lib.yml
examples/: query_bad_spacing.rs  query_bad_spacing.stderr  rusqlite_bad_spacing.rs  rusqlite_bad_spacing.stderr  rusqlite_prepare_cached_bad_spacing.rs  rusqlite_prepare_cached_bad_spacing.stderr  sqlx_macro_bad_spacing.rs  sqlx_macro_bad_spacing.stderr  sqlx_query_as_macro_bad_spacing.rs  sqlx_query_as_macro_bad_spacing.stderr  sqlx_query_scalar_bad_spacing.rs  sqlx_query_scalar_bad_spacing.stderr  sqlx_query_unchecked_macro_bad_spacing.rs  sqlx_query_unchecked_macro_bad_spacing.stderr
src/: config.rs  lib.rs  literal.rs  passes.rs  registry.rs  sqruff.rs
tests/: ui.rs
tests/ui-cargo-metadata/: Cargo.toml  metadata_excludes_lt01.stderr
tests/ui-external-sqlx/: external_sqlx_bad_spacing.rs  external_sqlx_bad_spacing.stderr
tests/ui-external-sqlx/auxiliary/: sqlx.rs
