[package]
name = "cargo_sqruff"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
dylint_linting = "5.0"
hashbrown = "0.17"
sqruff-lib = { git = "https://github.com/quarylabs/sqruff.git" }
toml = "1.1"

[dev-dependencies]
dylint_testing = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "sqlite"] }

[package.metadata.rust-analyzer]
rustc_private = true
